--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,17 +1,47 @@
 .div-left{
-    float:left;
-}
-.div-right{
-    float:right;
+  /*float: left;*/
 }
 
 
 .list {
-    text-align: center;
+  background-color: navy;
+  color: white;
 
-    width: 100px;
-    height: 120px;
+  text-align: center;
 
-    border: 3px solid navy;
-    border-radius: 5%;
+  padding-top: 25px;
+
 }
+
+.exchangeListMain{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 10px;
+
+  padding: 25px;
+
+}
+
+.exchangeListBox {
+  text-align: center;
+  color: navy;
+
+  width: 25%px;
+  height: 120px;
+
+  background-color: white;
+
+  border: 3px solid navy;
+  border-radius: 5%;
+
+  h2{
+    height: 30px;
+  }
+
+  p{
+    font-size: 13px;
+  }
+}
+
+
