--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,6 +1,87 @@
-.div-left{
-    float:left;
+.layout {
+    width:100%;
+    display: flex;
+    height: 100vh;
 }
-.div-right{
-    float:right;
+
+.panel {
+    width: 20%;
+    background-color: #1b243e;
+}
+
+.left {
+    width: 80%;
+    background-color: #1b243e;
+}
+
+.right {
+    width: 20%;
+    position: sticky;
+    top: 0;
+    background-color: #ffffff;
+    text-align: center;
+    margin-top: 5%;
+}
+
+.right img {
+    width: 80px;
+    height: auto;
+}
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.Msub-div {
+    width: 100%;
+    height: auto;
+    display: flex;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.sub-div {
+    width: 50%;
+}
+
+form {
+    padding: 0 16px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+input {
+    height: 44px;
+    margin-bottom: 14px;
+    padding: 0 12px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+}
+
+button {
+    height: 44px;
+    background-color: #1b243e;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+p {
+    font-size: 15px;
+}
+
+.list {
+    text-align: center;
+
+    width: 100%;
+    height: auto;
+    border: 3px solid navy;
+    border-radius: 5%;
 }
