--- a/src/css/List.module.css
+++ b/src/css/List.module.css
@@ -1,10 +1,9 @@
 .list {
-  background-color: navy;
   color: white;
 
   text-align: center;
 
-  padding-top: 25px;
+  padding-top: 50px;
 }
 
 .exchangeListMain {
@@ -13,7 +12,27 @@
   column-gap: 20px;
   row-gap: 15px;
 
-  padding: 50px;
+  height: 210px;
+
+  overflow-y: scroll;
+
+  padding-left: 50px;
+  padding-right: 50px;
+
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
+  mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
 }
 
 .exchangeListBox {
