--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,5 +1,5 @@
 .layout {
-    width:100%;
+    width: 100%;
     display: flex;
     height: 100vh;
 }
@@ -10,7 +10,7 @@
 }
 
 .left {
-    width: 78%;
+    width: 80%;
     background-color: #1b243e;
 }
 
@@ -44,7 +44,6 @@ body {
 
 
 form {
-    padding: 0 16px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -81,4 +80,42 @@ p {
     height: auto;
     border: 3px solid navy;
     border-radius: 5%;
+}
+
+.profile-div{
+    padding: 0 16px;
+}
+.profile-div img {
+    margin-bottom: 5%;
+    width: 50%;
+    height: 50%;
+}
+
+.Logined-profile img {
+    width: 50%;
+    height: 50%;
+}
+
+.Logined-profile p {
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.Bookmark {
+    background-color: #f0f1f4;
+    height: 500px;
+    margin: 0 40px;
+}
+
+.Bookmark ul {
+    list-style: none;
+    float: left;
+}
+
+.Login-div form input {
+    width: 100;
+}
+.gap{
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
