--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -95,6 +95,7 @@ p {
 .Logined-profile img {
     width: 50%;
     height: 50%;
+    border-radius: 50%;
 }
 
 .Logined-profile p {
@@ -141,15 +142,4 @@ p {
     width: 100%;
     height: 40px;
     margin-bottom: 10px;
-}
-
-.xx{
-    display: flex;;
-}
-.xx button{
-    width: 300px;
-    height:auto;
-}
-.xx input{
-    width:400px;
 }
