--- a/src/css/Calculator.module.css
+++ b/src/css/Calculator.module.css
@@ -1,55 +1,3 @@
-.a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.b {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.calculatorbox {
-    width: 600px;
-    background: white;
-    margin: 50px auto;
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.calculatorbox h2 {
-    margin-bottom: 20px;
-}
-
-.calculatorbox button {
-    width: 90px;
-    height: 90px;
-    margin-bottom: 10px;
-    box-shadow: 0px 0px 2px 2px rgb(0, 0, 0);
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.calculatorbox select {
-    width: 510px;
-    height: 40px;
-    margin-bottom: 20px;
-}
-
-.calculatorbox input {
-    width: 410px;
-    height: 40px;
-    margin-bottom: 0px;
-    box-shadow: 0px 0px 1px 1px gray;
-    box-sizing: border-box;
-}
-
-.swap {
-  width: 90px;
-  height: 90px;
-  margin-left: 10px;
-  font-size: 30px;
-  font-weight: bold;
+.button{
+    width:30
 }
