--- a/src/css/List.module.css
+++ b/src/css/List.module.css
@@ -1,5 +1,5 @@
 .list {
-  color: white;
+  color: black;
 
   text-align: center;
 
@@ -35,6 +35,10 @@
   );
 }
 
+.exchangeListMain::-webkit-scrollbar {
+  display: none;
+}
+
 .exchangeListBox {
   text-align: center;
   color: navy;
@@ -42,10 +46,12 @@
   width: auto;
   height: 200px;
 
-  background-color: white;
+  background-color: #eeeeee;
 
   border: 3px solid navy;
   border-radius: 5%;
+
+  box-shadow: 0px 0px 5px 3px gray;
 
   h2 {
     margin-top: 15%;
