--- a/src/css/List.module.css
+++ b/src/css/List.module.css
@@ -12,7 +12,7 @@
   column-gap: 20px;
   row-gap: 15px;
 
-  height: 210px;
+  height: 220px;
 
   overflow-y: scroll;
 
@@ -41,14 +41,15 @@
 
 .exchangeListBox {
   text-align: center;
-  color: navy;
+  color: #1b243e;
 
   width: auto;
   height: 200px;
 
-  background-color: #eeeeee;
+  margin: 10px;
 
-  border: 3px solid navy;
+  background-color: #1b243e09;
+
   border-radius: 5%;
 
   box-shadow: 0px 0px 5px 3px gray;
@@ -61,6 +62,8 @@
   p {
     font-size: 25px;
   }
+
+  
 }
 
 .exchangeListBox:hover {
