--- a/src/css/Calculator.module.css
+++ b/src/css/Calculator.module.css
@@ -1,5 +1,24 @@
-.button{
-    width:100px;
-    height:100px;
-    background-color: azure;
+.button {
+    width: 100px;
+    height: 100px;
+    background-color: rgb(48, 63, 63);
+}
+
+
+
+.CalMaindiv {
+    width: 600px;
+    background: white;
+    margin: 50px auto;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    margin:0,20px;
+}
+
+.Caldiv {
+    display: flex;
+    width: 100%;
+    height: auto;
+    text-align: center;
 }
