--- a/src/css/List.module.css
+++ b/src/css/List.module.css
@@ -1,9 +1,14 @@
 .list {
-  color: black;
+  color: white;
 
   text-align: center;
 
   padding-top: 50px;
+  
+  h3{
+    margin-left: 70px;
+    text-align: left;
+  }
 }
 
 .exchangeListMain {
