--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -11,14 +11,14 @@
 
 .left {
   width: 80%;
-  background-color: white;
+  background-color: #1b243e;
 }
 
 .right {
   width: 20%;
   position: sticky;
   top: 0;
-  background-color: #278be7;
+  background-color: white;
   text-align: center;
   padding-top: 5%;
 }
@@ -72,14 +72,7 @@ p {
   font-size: 15px;
 }
 
-.list {
-  text-align: center;
 
-  width: 100%;
-  height: auto;
-  border: 3px solid navy;
-  border-radius: 5%;
-}
 
 .profile-div {
   padding: 0 16px;
@@ -118,8 +111,8 @@ p {
 }
 
 .gap {
-  margin-top: 150px;
-  margin-bottom: 200px;
+  margin-top: 300px;
+  margin-bottom: 300px;
 }
 
 .calculator-box {
