--- a/src/css/List.module.css
+++ b/src/css/List.module.css
@@ -19,7 +19,7 @@
   column-gap: 20px;
   row-gap: 15px;
 
-  height: 210px;
+  height: 150px;
 
   overflow-y: scroll;
 
@@ -44,17 +44,15 @@
 
 .exchangeListBox {
   text-align: center;
-  color: navy;
+  color: rgb(0, 0, 0);
 
   width: auto;
-  height: 200px;
+  height: 150px;
 
   background-color: #eeeeee;
-
-  border: 3px solid navy;
   border-radius: 5%;
 
-  box-shadow: 0px 0px 5px 3px gray;
+  box-shadow: 0px 0px 5px 3px rgb(53, 52, 52);
   h2 {
     margin-top: 15%;
     height: 30px;
