--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
 .layout {
     width: 100%;
     display: flex;
     height: 100vh;
+
+    font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .left {
@@ -17,16 +24,19 @@
     text-align: center;
     padding-top: 5%;
 }
+
 .right img {
     width: 50%;
     height: auto;
     margin-bottom: 5%;
 }
+
 .profile-div img {
     margin-bottom: 5%;
     width: 50%;
     height: 50%;
 }
+
 html,
 body {
     margin: 0;
@@ -65,7 +75,7 @@ button {
     border-radius: 6px;
     font-size: 14px;
     cursor: pointer;
-    margin-bottom:10px;
+    margin-bottom: 10px;
 }
 
 p {
